Fix the layout issue with copilot jcarousel and handle IE7 properly
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@216066 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/dashboard-ie7.css
+++ b/src/web/css/dashboard-ie7.css
@@ -35,6 +35,26 @@ height: 1%;
 
 }
 
+.projectCopilotsList .jcarousel-item-horizontal,
+#projectCopilotsCarouselWrapper .jcarousel-item-placeholder-horizontal {
+    width: 330px;
+}
+.projectCopilotsList .jcarousel-container-horizontal {
+    width: 330px;
+    border: 1px solid #fff;
+}
+.projectCopilotsList .jcarousel-clip-horizontal {
+    width: 330px;
+    overflow:hidden!important;
+}
+
+#projectCopilotsCarouselWrapper{
+    display:block!important;
+    width: 330px!important;
+    height: 155px!important;
+    overflow:hidden!important;
+}
+
 #projectCopilotsCarousel .itemContainer{
 	  min-height:145px;
 	  padding-bottom:10px;
